--- a/LayeroneEAR/pom.xml
+++ b/LayeroneEAR/pom.xml
@@ -2,55 +2,64 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>layerone</artifactId>
-    <groupId>pl.tomekkup</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>layerone</artifactId>
+        <groupId>pl.tomekkup</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>pl.tomekkup</groupId>
     <artifactId>LayeroneEAR</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
     <name>LayeroneEAR</name>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
   
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
-                <version>2.8</version>
                 <configuration>
                     <version>6</version>
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
+                    <applicationName>LayerOne</applicationName>
+                    <modules>
+                        <ejbModule>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>LayeroneEJB</artifactId>
+                            <unpack>true</unpack>
+                            <bundleFileName>LayeroneEJB.jar</bundleFileName>
+                        </ejbModule>
+                        <webModule>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>LayeroneWEB</artifactId>
+                            <unpack>true</unpack>
+                            <bundleFileName>LayeroneWEB.war</bundleFileName>
+                            <contextRoot>/</contextRoot>
+                        </webModule>
+                    </modules>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArgs>-Djboss.socket.binding.port-offset=100</jvmArgs>
+                    <filename>${project.build.finalName}.ear</filename>
+                    <addUser>admin:123:admin:ManagementRealm:false</addUser>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
-            <groupId>pl.tomekkup</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>LayeroneEJB</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>ejb</type>
         </dependency>
         <dependency>
-            <groupId>pl.tomekkup</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>LayeroneWEB</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>war</type>
         </dependency>
     </dependencies>
