--- a/LayeroneWEB/pom.xml
+++ b/LayeroneWEB/pom.xml
@@ -19,6 +19,21 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>6.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>afterdark</artifactId>
+            <version>1.0.10</version>
+        </dependency>
         <!-- libraries version adequate to Wildfly 14 -->
         <dependency>
             <groupId>javax</groupId>
@@ -79,5 +94,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>primefaces-repo</id>
+            <name>Primefaces Repository</name>
+            <url>https://repository.primefaces.org/</url>
+        </repository>
+    </repositories>
 
 </project>
