--- a/LayeroneWEB/src/main/webapp/WEB-INF/web.xml
+++ b/LayeroneWEB/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,13 @@
         <param-name>primefaces.THEME</param-name>
         <param-value>afterdark</param-value>
     </context-param>
+    
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
 
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
