--- a/LayeroneWEB/pom.xml
+++ b/LayeroneWEB/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>reactive-streams</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.ocpsoft</groupId>
+            <artifactId>prettyfaces-jsf2</artifactId>
+            <version>3.3.3</version>
+        </dependency>
     </dependencies>
 
     <build>
