--- a/LayeroneWEB/pom.xml
+++ b/LayeroneWEB/pom.xml
@@ -20,20 +20,11 @@
     
     <dependencies>
         <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>6.2</version>
+            <groupId>net.bootsfaces</groupId>
+            <artifactId>bootsfaces</artifactId>
+            <version>1.3.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.primefaces.extensions</groupId>
-            <artifactId>primefaces-extensions</artifactId>
-            <version>6.2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.primefaces.themes</groupId>
-            <artifactId>afterdark</artifactId>
-            <version>1.0.10</version>
-        </dependency>
+              
         <!-- libraries version adequate to Wildfly 14 -->
         <dependency>
             <groupId>javax</groupId>
@@ -115,13 +106,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>primefaces-repo</id>
-            <name>Primefaces Repository</name>
-            <url>https://repository.primefaces.org/</url>
-        </repository>
-    </repositories>
 
 </project>
